gatewayclass.yml
kind: GatewayClass
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: istio
spec:
  controller: istio.io/gateway-controller
