deployandservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-web
spec:
  selector:
    matchLabels:
      app: node-web
  template:
    metadata:
      labels:
        app: node-web
    spec:
      containers:
      - name: node-web
        image: helloworld-nodejs:v1
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: node-web
spec:
  selector:
    app: node-web
  ports:
  - port: 8080
    targetPort: 8080
