gateway.yml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: gateway-web
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:  
  - hostname: "*"
    protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      namespaces:
        from: All
      selector:
        matchLabels:
          gateway: node-web-gw
